# greencc

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  walkthrough.md
examples/: sample1.cpp  sample2.cpp
include/: ast.h  codegen.h  energy_model.h  lexer.h  llvm_codegen.h  optimizer.h  parser.h  semantic.h  token.h  visitor.h
src/: codegen.cpp  energy_model.cpp  lexer.cpp  llvm_codegen.cpp  main.cpp  optimizer.cpp  parser.cpp  semantic.cpp
tests/: test_lexer.cpp  test_llvm_codegen.cpp  test_optimizer.cpp  test_parser.cpp
web/: package-lock.json  package.json  server.js
web/public/: app.js  index.html  styles.css
